# mc

./: .flake8  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Makefile  docker-compose.testing.yml  docker-compose.yml  pyproject.toml  tasks.py
.mk-lib/: CHANGELOG.md  LICENSE  README.md  self-upgrade.sh  variables.mk
mc/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
